--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,7 @@
     }
 	.container {
       width: 600px; /* Increased width */
+	  max-height: 1000px;
     }
     .btn {
       margin-top: 10px;
@@ -29,7 +30,7 @@
     
     <div class="mb-3">
       <input type="text" class="form-control" id="channelInput" placeholder="Enter Channel Name" />
-      <button class="btn btn-primary w-100" id="addChannelButton">Add to Blacklist</button>
+      <button class="btn btn-danger w-100" id="addChannelButton">Add to Blacklist</button>
     </div>
     
     <h4 class="mt-4 mb-3">Blacklisted Channels</h4>
