--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube Channel Blacklist</title>
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
   <style>
     body {
@@ -57,7 +58,7 @@
 	<!-- Navbar: image and text -->
 <nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand d-flex align-items-center" href="#">
-    <i class="fa fa-youtube-play" style="font-size:48px;color:red;"></i>
+    <i class="fa fa-hand-middle-finger" style="font-size:48px;color:red;padding-left:10px;padding-right:15px;"></i>
     <!-- Add span title and align it in the middle height of the navbar -->
     <span class="ml-2">YouTube Channels Blacklist</span>
   </a>
@@ -87,22 +88,28 @@
     <!-- Social Icons -->
     <div class="d-flex justify-content-center">
       <a href="https://stackoverflow.com/users/4143292/federico-gentile" target="_blank" class="text-white mx-2">
-        <i class="fa fa-stack-overflow" style="font-size:20px;"></i>
+        <i class="fa-brands fa-stack-overflow" style="font-size:20px;"></i>
       </a>
       <a href="https://github.com/FedericoGentile" target="_blank" class="text-white mx-2">
-        <i class="fa fa-github" style="font-size:20px;"></i>
+        <i class="fa-brands fa-github" style="font-size:20px;"></i>
       </a>
       <a href="https://www.linkedin.com/in/federico-gentile-b1091552/" target="_blank" class="text-white mx-2">
-        <i class="fa fa-linkedin" style="font-size:20px;"></i>
+        <i class="fa-brands fa-linkedin" style="font-size:20px;"></i>
       </a>
     </div>
   </div>
 </footer>
 
   <!-- Bootstrap JS and dependencies -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous">
+  </script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
