--- a/popup.html
+++ b/popup.html
@@ -8,51 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    nav {
-      margin-bottom: 20px;
-      background-color: red;
-      color: white;
-      ;
-    }
-	footer {
-		margin-top:20px;
-	}
-    .form-control {
-      margin-bottom: 10px;
-    }
-    .container {
-      width: 375px; /* Increased width */
-      max-height: 600px;
-      overflow-y: auto;}
-    .btn {
-      margin-top: 10px;
-    }
-    /* danger button */
-    .btn-danger {
-        background-color: red;
-        color: white;
-        border-color: red;
-        border-radius: red;
-    }
-    .btn-danger:hover,
-    .btn-danger:focus,
-    .btn-danger:active {
-        background-color: red;
-        color: white;
-        border-color: red;
-    }
-    /* Vertically center the container */
-    .centered-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  </style>
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
 	<!-- Navbar: image and text -->
