--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,9 @@
 	<!-- Navbar: image and text -->
 <nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand d-flex align-items-center" href="#">
-    <i class="fa fa-hand-middle-finger" style="font-size:48px;color:red;padding-left:10px;padding-right:15px;"></i>
+    <!-- Add image to the navbar -->
+    <img src="./img/icon_128.png" style="width:20%;padding-left:10px;padding-right:15px;">
+    <!--i class="fa fa-hand-middle-finger" style="font-size:48px;color:red;padding-left:10px;padding-right:15px;"></i-->
     <!-- Add span title and align it in the middle height of the navbar -->
     <span class="ml-2">YouTube Channels Blacklist</span>
   </a>
