Added collapsable feature within support options

--- a/popup.html
+++ b/popup.html
@@ -56,7 +56,15 @@
       <a href="#" class="text-white" id="supportMeLink" data-bs-toggle="collapse" data-bs-target="#supportOptions" aria-expanded="false" aria-controls="supportOptions">Support Me</a>
       <div class="collapse mt-2" id="supportOptions">
         <ul class="list-group">
-          <li class="list-group-item bg-dark text-white"><a href="#" target="_blank" class="text-white">Bitcoin</a></li>
+          <li class="list-group-item bg-dark text-white">
+            <a href="#" class="text-white" id="lightningLink" data-bs-toggle="collapse" data-bs-target="#lightningOptions" aria-expanded="false" aria-controls="lightningOptions">Lightning Network</a>
+              <div class="collapse mt-2" id="lightningOptions">
+                <ul class="list-group bg-dark text-white">
+                  <li class="list-group bg-dark"><img src="./img/wallet_of_satoshi.png"></li>
+                </ul>
+              </div>
+            </a>
+          </li>
           <li class="list-group-item bg-dark text-white"><a href="https://ko-fi.com/federicogentile90/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;" target="_blank" class="text-white">Buy Me a Coffee</a></li>
           <li class="list-group-item bg-dark text-white"><a href="#" target="_blank" class="text-white">Lightning Network</a></li>
         </ul>
