Improved the support session

--- a/popup.html
+++ b/popup.html
@@ -57,6 +57,16 @@
       <div class="collapse mt-2" id="supportOptions">
         <ul class="list-group">
           <li class="list-group-item bg-dark text-white">
+            <a href="#" class="text-white" id="bitcoinLink" data-bs-toggle="collapse" data-bs-target="#bitcoinOptions" aria-expanded="false" aria-controls="bitcoinOptions">Bitcoin</a>
+              <div class="collapse mt-2" id="bitcoinOptions">
+                <ul class="list-group bg-dark text-white">
+                  Address: 3QpZ8v1fz3Z6J8Z9q4ZXXX
+                </ul>
+              </div>
+            </a>
+          </li>
+          <li class="list-group-item bg-dark text-white"><a href="https://ko-fi.com/federicogentile90/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;" target="_blank" class="text-white">Buy Me a Coffee</a></li>
+          <li class="list-group-item bg-dark text-white">
             <a href="#" class="text-white" id="lightningLink" data-bs-toggle="collapse" data-bs-target="#lightningOptions" aria-expanded="false" aria-controls="lightningOptions">Lightning Network</a>
               <div class="collapse mt-2" id="lightningOptions">
                 <ul class="list-group bg-dark text-white">
@@ -65,8 +75,6 @@
               </div>
             </a>
           </li>
-          <li class="list-group-item bg-dark text-white"><a href="https://ko-fi.com/federicogentile90/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;" target="_blank" class="text-white">Buy Me a Coffee</a></li>
-          <li class="list-group-item bg-dark text-white"><a href="#" target="_blank" class="text-white">Lightning Network</a></li>
         </ul>
       </div>
     </div>
