Made footer stick to bottom

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
     </a>
   </nav>
   <div class="centered-container">
-    <div class="container text-center">
+    <div class="container text-center" style="margin-bottom:100px;">
       <div class="mb-3">
         <input type="text" class="form-control" id="channelInput" placeholder="Enter Channel Name" />
         <button class="btn btn-danger w-100" id="addChannelButton">Add to Blacklist</button>
@@ -31,7 +31,7 @@
   </div>
   
  <!-- Footer -->
-<footer class="bg-dark text-white mt-5 p-2">
+<footer class="footer fixed-bottom bg-dark text-white mt-5 p-2">
   <div class="container text-center">
     <!-- Personal Website -->
     <!--div class="mb-2">
