--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
         <input type="text" class="form-control" id="channelInput" placeholder="Enter Channel Name" />
         <button class="btn btn-danger w-100" id="addChannelButton">Add to Blacklist</button>
       </div>
-      <h4 class="mt-4 mb-3">Blacklisted Channels</h4>
+      <h4 class="mt-4 mb-3">Blacklisted Channels: <span id="counter">0</span></h4>
       <ul class="list-group" id="blacklist"></ul>
     </div>
   </div>
