--- a/popup.html
+++ b/popup.html
@@ -26,9 +26,14 @@
         <button class="btn btn-danger w-100" id="addChannelButton">Add to Blacklist</button>
       </div>
       <h4 class="mt-4 mb-3">Blacklisted Channels: <span id="counter">0</span></h4>
+      <div class="mb-3">
+        <input class="form-control" id="searchBox" placeholder="Search...">
+      </div>
       <ul class="list-group" id="blacklist"></ul>
     </div>
+    
   </div>
+
   
  <!-- Footer -->
 <footer class="footer fixed-bottom bg-dark text-white mt-5 p-2">
@@ -82,14 +87,8 @@
 </footer>
 
   <!-- Bootstrap JS and dependencies -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-    crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-    crossorigin="anonymous">
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="popup.js"></script>
 </body>
