--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand d-flex align-items-center" href="#">
       <!-- Add image to the navbar -->
-      <img src="./img/icon_128.png" style="width:20%;padding-left:10px;padding-right:15px;">
+      <img src="../images/icon_128.png" style="width:20%;padding-left:10px;padding-right:15px;">
       <span class="ml-2">YouTube Channels Blacklist</span>
     </a>
   </nav>
