--- a/popup/popup.html
+++ b/popup/popup.html
@@ -65,7 +65,7 @@
             <a href="#" class="text-white" id="bitcoinLink" data-bs-toggle="collapse" data-bs-target="#bitcoinOptions" aria-expanded="false" aria-controls="bitcoinOptions">Bitcoin</a>
               <div class="collapse mt-2" id="bitcoinOptions">
                 <ul class="list-group bg-dark text-white">
-                  <li class="list-group bg-dark"><img src="./img/bitcoin_wallet.png"><span style="font-size:14px;">bc1qn8nmnfc4fcldgw4kkjqz3wlukfjcx59cdsmjyd</span></li>
+                  <li class="list-group bg-dark"><img src="../images/bitcoin_wallet.png"><span style="font-size:14px;">bc1qn8nmnfc4fcldgw4kkjqz3wlukfjcx59cdsmjyd</span></li>
                 </ul>
               </div>
             </a>
@@ -75,7 +75,7 @@
             <a href="#" class="text-white" id="lightningLink" data-bs-toggle="collapse" data-bs-target="#lightningOptions" aria-expanded="false" aria-controls="lightningOptions">Lightning Network</a>
               <div class="collapse mt-2" id="lightningOptions">
                 <ul class="list-group bg-dark text-white">
-                  <li class="list-group bg-dark"><img src="./img/wallet_of_satoshi.png"><span style="font-size:14px;">domedtimer15@walletofsatoshi.com</span></li>
+                  <li class="list-group bg-dark"><img src="../images/wallet_of_satoshi.png"><span style="font-size:14px;">domedtimer15@walletofsatoshi.com</span></li>
                 </ul>
               </div>
             </a>
